<?xml version="1.0" encoding="UTF-8"?>
<project
        xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
        xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd"
        xmlns="http://maven.apache.org/POM/4.0.0"
>
    <modelVersion>4.0.0</modelVersion>

    <groupId>com.minhcreator</groupId>
    <artifactId>manager_app</artifactId>
    <version>1.0-SNAPSHOT</version>
    <properties>
        <maven.compiler.source>25</maven.compiler.source>
        <maven.compiler.target>25</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    </properties>
    <dependencies>
        <!--  swing timing      -->
        <dependency>
            <groupId>org.jdesktop</groupId>
            <artifactId>timingframework</artifactId>
            <version>0.55</version>
            <scope>system</scope>
            <systemPath>${basedir}/library/TimingFramework-0.55.jar</systemPath>
        </dependency>
        <!-- crazy-panel -->
        <dependency>
            <groupId>raven.crazy-panel</groupId>
            <artifactId>swing-crazy-panel</artifactId>
            <version>1.0.0</version>
            <scope>system</scope>
            <systemPath>${basedir}/library/swing-crazy-panel-1.0.0.jar</systemPath>
        </dependency>

        <!--  FLATDAF MAIN PKG      -->
        <dependency>
            <groupId>com.formdev</groupId>
            <artifactId>flatlaf</artifactId>
            <version>3.7</version>
        </dependency>
        <!--  FLATDAF EXTRA      -->
        <dependency>
            <groupId>com.formdev</groupId>
            <artifactId>flatlaf-extras</artifactId>
            <version>3.7</version>
        </dependency>
        <!--   SVG LOAD     -->
        <dependency>
            <groupId>com.github.weisj</groupId>
            <artifactId>jsvg</artifactId>
            <version>2.0.0</version>
        </dependency>
        <!-- Font load -->
        <dependency>
            <groupId>com.formdev</groupId>
            <artifactId>flatlaf-fonts-jetbrains-mono</artifactId>
            <version>2.304</version>
        </dependency>

        <!-- layout support -->
        <dependency>
            <groupId>com.miglayout</groupId>
            <artifactId>miglayout-swing</artifactId>
            <version>11.4.2</version>
        </dependency>

        <!-- date chooser      -->
        <dependency>
            <groupId>raven.datechooser</groupId>
            <artifactId>datechooser-swing</artifactId>
            <version>1.4.2</version>
            <scope>system</scope>
            <systemPath>${basedir}/library/datechooser-swing-1.4.2.jar</systemPath>
        </dependency>

        <!-- date chooser      -->
        <dependency>
            <groupId>io.github.dj-raven</groupId>
            <artifactId>swing-datetime-picker</artifactId>
            <version>2.1.3</version>
        </dependency>

        <!-- chart      -->
        <dependency>
            <groupId>raven.chart</groupId>
            <artifactId>swing-chart</artifactId>
            <version>1.1.0</version>
            <scope>system</scope>
            <systemPath>${basedir}/library/swing-chart-1.1.0-beta.jar</systemPath>
        </dependency>

        <!-- Toast Notification -->
        <dependency>
            <groupId>raven.toast</groupId>
            <artifactId>swing-toast-notifications</artifactId>
            <version>1.0.4</version>
            <scope>system</scope>
            <systemPath>${basedir}/library/swing-toast-notifications-1.0.4.jar</systemPath>
        </dependency>
        <!-- PostgreSQL (Supabase) -->
        <dependency>
            <groupId>org.postgresql</groupId>
            <artifactId>postgresql</artifactId>
            <version>42.7.5</version>
        </dependency>

        <!-- Hibernate Core (Jakarta Persistence) -->
        <dependency>
            <groupId>org.hibernate.orm</groupId>
            <artifactId>hibernate-core</artifactId>
            <version>6.6.0.Final</version>
        </dependency>

        <!-- Hibernate C3P0 Connection Pooling -->
        <dependency>
            <groupId>org.hibernate.orm</groupId>
            <artifactId>hibernate-c3p0</artifactId>
            <version>6.6.0.Final</version>
        </dependency>

        <!-- Jakarta Persistence API -->
        <dependency>
            <groupId>jakarta.persistence</groupId>
            <artifactId>jakarta.persistence-api</artifactId>
            <version>3.1.0</version>
        </dependency>

        <!-- BCrypt password hashing -->
        <dependency>
            <groupId>at.favre.lib</groupId>
            <artifactId>bcrypt</artifactId>
            <version>0.10.2</version>
        </dependency>

        <!--  java layout      -->
        <dependency>
            <groupId>io.github.dj-raven</groupId>
            <artifactId>modal-dialog</artifactId>
            <version>2.5.2</version>
        </dependency>
        <dependency>
            <groupId>org.netbeans.external</groupId>
            <artifactId>AbsoluteLayout</artifactId>
            <version>RELEASE280</version>
        </dependency>

        <!-- pdf export -->
        <dependency>
            <groupId>com.itextpdf</groupId>
            <artifactId>itextpdf</artifactId>
            <version>5.5.13.3</version>
            <!--            <type>pom</type>-->
        </dependency>
    </dependencies>
</project>